// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle disabled = matches snapshot 1`] = `
.c1 {
  position: relative;
  display: block;
  width: 2.66667rem;
  min-width: 2.66667rem;
  height: calc(1rem - 1px);
  margin-bottom: 0;
  margin-left: 0;
  padding: 1px;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: var(--px-toggle__background-border--unchecked,#889aa5);
  text-indent: -9999rem;
  pointer-events: auto;
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
  cursor: not-allowed;
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c1:before {
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:after {
  position: absolute;
  display: block;
  content: "";
}

.c1:before {
  position: absolute;
  display: block;
  content: "";
  top: 1px;
  right: 1px;
  bottom: 1px;
  left: 1px;
  background-color: var(--px-toggle__background--unchecked,#d8e0e5);
}

.c1:hover {
  background-color: var(--px-toggle__background-border--unchecked--hover,#677e8c);
}

.c1:hover:before {
  background-color: var(--px-toggle__background--unchecked--hover,#b6c3cc);
}

.c1:active {
  background-color: var(--px-toggle__background-border--unchecked-pressed,#4f6472);
}

.c1:active:before {
  background-color: var(--px-toggle__background--unchecked--pressed,#748b99);
}

.c1:after {
  top: -3px;
  left: -1px;
  height: 1.33333rem;
  width: 1.33333rem;
  border: 1px solid var(--px-toggle__switch-border,#889aa5);
  border-radius: 50%;
  box-shadow: 0 1px 2px var(--px-toggle__switch-shadow-color,rgba(0,0,0,0.15));
  background-color: var(--px-toggle__switch,#fff);
  -webkit-transition: margin 0.4s,background 0.4s,border-color 0.4s;
  transition: margin 0.4s,background 0.4s,border-color 0.4s;
}

.c1:hover:after {
  background-color: var(--px-toggle__switch--hover,#c5d1d8);
  border: 1px solid var(--px-toggle__switch-border--hover,#889aa5);
}

.c1:active:after {
  background-color: var(--px-toggle__switch--pressed,#96a8b2);
  border: 1px solid var(--px-toggle__switch-border--pressed,#889aa5);
}

.c0 {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
}

.c0:disabled,
.c0:disabled + label {
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c0:disabled:after,
.c0:disabled + label:after {
  background-color: var(--px-toggle__switch--disabled,#fff);
}

.c0:disabled:before,
.c0:disabled + label:before {
  background-color: var(--px-toggle__background--unchecked--disabled,#fff);
  box-shadow: none;
}

.c0:checked:disabled + label {
  background-color: var(--px-toggle__background--checked--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:after {
  box-shadow: none;
  background-color: var(--px-toggle__switch--disabled,white);
  border-width: 1px;
  border-style: solid;
  border-color: var(--px-toggle__switch-border--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:before {
  background-color: transparent;
}

.c0:checked + label {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:before {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:hover {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:hover:before {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:active {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:active:before {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:after {
  margin-left: 1.467rem;
}

<div
  className={null}
>
  <input
    checked={null}
    className="c0"
    disabled={true}
    id="toggle1"
    name="toggle1"
    size={null}
    type="checkbox"
    value={null}
  />
  <label
    className="c1"
    disabled={true}
    onClick={null}
    size={null}
  />
</div>
`;

exports[`Toggle matches snapshot 1`] = `
.c1 {
  position: relative;
  display: block;
  width: 2.66667rem;
  min-width: 2.66667rem;
  height: calc(1rem - 1px);
  margin-bottom: 0;
  margin-left: 0;
  padding: 1px;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: var(--px-toggle__background-border--unchecked,#889aa5);
  text-indent: -9999rem;
  pointer-events: auto;
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:before {
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:after {
  position: absolute;
  display: block;
  content: "";
}

.c1:before {
  position: absolute;
  display: block;
  content: "";
  top: 1px;
  right: 1px;
  bottom: 1px;
  left: 1px;
  background-color: var(--px-toggle__background--unchecked,#d8e0e5);
}

.c1:hover {
  background-color: var(--px-toggle__background-border--unchecked--hover,#677e8c);
}

.c1:hover:before {
  background-color: var(--px-toggle__background--unchecked--hover,#b6c3cc);
}

.c1:active {
  background-color: var(--px-toggle__background-border--unchecked-pressed,#4f6472);
}

.c1:active:before {
  background-color: var(--px-toggle__background--unchecked--pressed,#748b99);
}

.c1:after {
  top: -3px;
  left: -1px;
  height: 1.33333rem;
  width: 1.33333rem;
  border: 1px solid var(--px-toggle__switch-border,#889aa5);
  border-radius: 50%;
  box-shadow: 0 1px 2px var(--px-toggle__switch-shadow-color,rgba(0,0,0,0.15));
  background-color: var(--px-toggle__switch,#fff);
  -webkit-transition: margin 0.4s,background 0.4s,border-color 0.4s;
  transition: margin 0.4s,background 0.4s,border-color 0.4s;
}

.c1:hover:after {
  background-color: var(--px-toggle__switch--hover,#c5d1d8);
  border: 1px solid var(--px-toggle__switch-border--hover,#889aa5);
}

.c1:active:after {
  background-color: var(--px-toggle__switch--pressed,#96a8b2);
  border: 1px solid var(--px-toggle__switch-border--pressed,#889aa5);
}

.c0 {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
}

.c0:disabled,
.c0:disabled + label {
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c0:disabled:after,
.c0:disabled + label:after {
  background-color: var(--px-toggle__switch--disabled,#fff);
}

.c0:disabled:before,
.c0:disabled + label:before {
  background-color: var(--px-toggle__background--unchecked--disabled,#fff);
  box-shadow: none;
}

.c0:checked:disabled + label {
  background-color: var(--px-toggle__background--checked--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:after {
  box-shadow: none;
  background-color: var(--px-toggle__switch--disabled,white);
  border-width: 1px;
  border-style: solid;
  border-color: var(--px-toggle__switch-border--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:before {
  background-color: transparent;
}

.c0:checked + label {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:before {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:hover {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:hover:before {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:active {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:active:before {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:after {
  margin-left: 1.467rem;
}

<div
  className={null}
>
  <input
    checked={null}
    className="c0"
    disabled={null}
    id="toggle1"
    name="toggle1"
    size={null}
    type="checkbox"
    value={null}
  />
  <label
    className="c1"
    disabled={null}
    onClick={null}
    size={null}
  />
</div>
`;

exports[`Toggle sizes should render huge 1`] = `
.c1 {
  position: relative;
  display: block;
  width: 2.66667rem;
  min-width: 2.66667rem;
  height: calc(1rem - 1px);
  margin-bottom: 0;
  margin-left: 0;
  padding: 1px;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: var(--px-toggle__background-border--unchecked,#889aa5);
  text-indent: -9999rem;
  pointer-events: auto;
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
  width: 5.33333rem;
  min-width: 5.33333rem;
  height: 2rem;
}

.c1:before {
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:after {
  position: absolute;
  display: block;
  content: "";
}

.c1:before {
  position: absolute;
  display: block;
  content: "";
  top: 1px;
  right: 1px;
  bottom: 1px;
  left: 1px;
  background-color: var(--px-toggle__background--unchecked,#d8e0e5);
}

.c1:hover {
  background-color: var(--px-toggle__background-border--unchecked--hover,#677e8c);
}

.c1:hover:before {
  background-color: var(--px-toggle__background--unchecked--hover,#b6c3cc);
}

.c1:active {
  background-color: var(--px-toggle__background-border--unchecked-pressed,#4f6472);
}

.c1:active:before {
  background-color: var(--px-toggle__background--unchecked--pressed,#748b99);
}

.c1:after {
  top: -3px;
  left: -1px;
  height: 1.33333rem;
  width: 1.33333rem;
  border: 1px solid var(--px-toggle__switch-border,#889aa5);
  border-radius: 50%;
  box-shadow: 0 1px 2px var(--px-toggle__switch-shadow-color,rgba(0,0,0,0.15));
  background-color: var(--px-toggle__switch,#fff);
  -webkit-transition: margin 0.4s,background 0.4s,border-color 0.4s;
  transition: margin 0.4s,background 0.4s,border-color 0.4s;
}

.c1:hover:after {
  background-color: var(--px-toggle__switch--hover,#c5d1d8);
  border: 1px solid var(--px-toggle__switch-border--hover,#889aa5);
}

.c1:active:after {
  background-color: var(--px-toggle__switch--pressed,#96a8b2);
  border: 1px solid var(--px-toggle__switch-border--pressed,#889aa5);
}

.c1:after {
  top: -.33333rem;
  left: -.06667rem;
  height: calc(2.66667rem);
  width: calc(2.66667rem);
}

.c0 {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
}

.c0:disabled,
.c0:disabled + label {
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c0:disabled:after,
.c0:disabled + label:after {
  background-color: var(--px-toggle__switch--disabled,#fff);
}

.c0:disabled:before,
.c0:disabled + label:before {
  background-color: var(--px-toggle__background--unchecked--disabled,#fff);
  box-shadow: none;
}

.c0:checked:disabled + label {
  background-color: var(--px-toggle__background--checked--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:after {
  box-shadow: none;
  background-color: var(--px-toggle__switch--disabled,white);
  border-width: 1px;
  border-style: solid;
  border-color: var(--px-toggle__switch-border--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:before {
  background-color: transparent;
}

.c0:checked + label {
  background-color: var(--px-toggle__background--checked,#007acc);
  width: 5.33333rem;
  min-width: 5.33333rem;
  height: 2rem;
}

.c0:checked + label:before {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:hover {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:hover:before {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:active {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:active:before {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:after {
  margin-left: 1.467rem;
}

.c0:checked + label:after {
  margin-left: 2.8rem;
  top: -.33333rem;
  left: -.06667rem;
  height: calc(2.66667rem);
  width: calc(2.66667rem);
}

<div
  className={null}
>
  <input
    checked={null}
    className="c0"
    disabled={null}
    id="toggle1"
    name="toggle1"
    size="huge"
    type="checkbox"
    value={null}
  />
  <label
    className="c1"
    disabled={null}
    onClick={null}
    size="huge"
  />
</div>
`;

exports[`Toggle sizes should render large 1`] = `
.c1 {
  position: relative;
  display: block;
  width: 2.66667rem;
  min-width: 2.66667rem;
  height: calc(1rem - 1px);
  margin-bottom: 0;
  margin-left: 0;
  padding: 1px;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: var(--px-toggle__background-border--unchecked,#889aa5);
  text-indent: -9999rem;
  pointer-events: auto;
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
  width: 4rem;
  min-width: 4rem;
  height: 1.33333rem;
}

.c1:before {
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:after {
  position: absolute;
  display: block;
  content: "";
}

.c1:before {
  position: absolute;
  display: block;
  content: "";
  top: 1px;
  right: 1px;
  bottom: 1px;
  left: 1px;
  background-color: var(--px-toggle__background--unchecked,#d8e0e5);
}

.c1:hover {
  background-color: var(--px-toggle__background-border--unchecked--hover,#677e8c);
}

.c1:hover:before {
  background-color: var(--px-toggle__background--unchecked--hover,#b6c3cc);
}

.c1:active {
  background-color: var(--px-toggle__background-border--unchecked-pressed,#4f6472);
}

.c1:active:before {
  background-color: var(--px-toggle__background--unchecked--pressed,#748b99);
}

.c1:after {
  top: -3px;
  left: -1px;
  height: 1.33333rem;
  width: 1.33333rem;
  border: 1px solid var(--px-toggle__switch-border,#889aa5);
  border-radius: 50%;
  box-shadow: 0 1px 2px var(--px-toggle__switch-shadow-color,rgba(0,0,0,0.15));
  background-color: var(--px-toggle__switch,#fff);
  -webkit-transition: margin 0.4s,background 0.4s,border-color 0.4s;
  transition: margin 0.4s,background 0.4s,border-color 0.4s;
}

.c1:hover:after {
  background-color: var(--px-toggle__switch--hover,#c5d1d8);
  border: 1px solid var(--px-toggle__switch-border--hover,#889aa5);
}

.c1:active:after {
  background-color: var(--px-toggle__switch--pressed,#96a8b2);
  border: 1px solid var(--px-toggle__switch-border--pressed,#889aa5);
}

.c1:after {
  top: -.33333rem;
  left: -.06667rem;
  height: 2rem;
  width: 2rem;
}

.c0 {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
}

.c0:disabled,
.c0:disabled + label {
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c0:disabled:after,
.c0:disabled + label:after {
  background-color: var(--px-toggle__switch--disabled,#fff);
}

.c0:disabled:before,
.c0:disabled + label:before {
  background-color: var(--px-toggle__background--unchecked--disabled,#fff);
  box-shadow: none;
}

.c0:checked:disabled + label {
  background-color: var(--px-toggle__background--checked--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:after {
  box-shadow: none;
  background-color: var(--px-toggle__switch--disabled,white);
  border-width: 1px;
  border-style: solid;
  border-color: var(--px-toggle__switch-border--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:before {
  background-color: transparent;
}

.c0:checked + label {
  background-color: var(--px-toggle__background--checked,#007acc);
  width: 4rem;
  min-width: 4rem;
  height: 1.33333rem;
}

.c0:checked + label:before {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:hover {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:hover:before {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:active {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:active:before {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:after {
  margin-left: 1.467rem;
}

.c0:checked + label:after {
  margin-left: 2.133rem;
  top: -.33333rem;
  left: -.06667rem;
  height: 2rem;
  width: 2rem;
}

<div
  className={null}
>
  <input
    checked={null}
    className="c0"
    disabled={null}
    id="toggle1"
    name="toggle1"
    size="large"
    type="checkbox"
    value={null}
  />
  <label
    className="c1"
    disabled={null}
    onClick={null}
    size="large"
  />
</div>
`;

exports[`Toggle sizes should render small 1`] = `
.c1 {
  position: relative;
  display: block;
  width: 2.66667rem;
  min-width: 2.66667rem;
  height: calc(1rem - 1px);
  margin-bottom: 0;
  margin-left: 0;
  padding: 1px;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: var(--px-toggle__background-border--unchecked,#889aa5);
  text-indent: -9999rem;
  pointer-events: auto;
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
  width: 2rem;
  min-width: 2rem;
  height: calc(.66667rem + 1px);
}

.c1:before {
  border-radius: 2rem;
  -webkit-transition: background 0.4s;
  transition: background 0.4s;
}

.c1:after {
  position: absolute;
  display: block;
  content: "";
}

.c1:before {
  position: absolute;
  display: block;
  content: "";
  top: 1px;
  right: 1px;
  bottom: 1px;
  left: 1px;
  background-color: var(--px-toggle__background--unchecked,#d8e0e5);
}

.c1:hover {
  background-color: var(--px-toggle__background-border--unchecked--hover,#677e8c);
}

.c1:hover:before {
  background-color: var(--px-toggle__background--unchecked--hover,#b6c3cc);
}

.c1:active {
  background-color: var(--px-toggle__background-border--unchecked-pressed,#4f6472);
}

.c1:active:before {
  background-color: var(--px-toggle__background--unchecked--pressed,#748b99);
}

.c1:after {
  top: -3px;
  left: -1px;
  height: 1.33333rem;
  width: 1.33333rem;
  border: 1px solid var(--px-toggle__switch-border,#889aa5);
  border-radius: 50%;
  box-shadow: 0 1px 2px var(--px-toggle__switch-shadow-color,rgba(0,0,0,0.15));
  background-color: var(--px-toggle__switch,#fff);
  -webkit-transition: margin 0.4s,background 0.4s,border-color 0.4s;
  transition: margin 0.4s,background 0.4s,border-color 0.4s;
}

.c1:hover:after {
  background-color: var(--px-toggle__switch--hover,#c5d1d8);
  border: 1px solid var(--px-toggle__switch-border--hover,#889aa5);
}

.c1:active:after {
  background-color: var(--px-toggle__switch--pressed,#96a8b2);
  border: 1px solid var(--px-toggle__switch-border--pressed,#889aa5);
}

.c1:after {
  top: -2px;
  left: 0;
  height: 1rem;
  width: 1rem;
}

.c0 {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  -webkit-clip: rect(0 0 0 0) !important;
  clip: rect(0 0 0 0) !important;
}

.c0:disabled,
.c0:disabled + label {
  background-color: var(--px-toggle__background-border--unchecked--disabled,rgba(0,0,0,0.2));
  pointer-events: none;
}

.c0:disabled:after,
.c0:disabled + label:after {
  background-color: var(--px-toggle__switch--disabled,#fff);
}

.c0:disabled:before,
.c0:disabled + label:before {
  background-color: var(--px-toggle__background--unchecked--disabled,#fff);
  box-shadow: none;
}

.c0:checked:disabled + label {
  background-color: var(--px-toggle__background--checked--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:after {
  box-shadow: none;
  background-color: var(--px-toggle__switch--disabled,white);
  border-width: 1px;
  border-style: solid;
  border-color: var(--px-toggle__switch-border--disabled,rgba(0,0,0,0.2));
}

.c0:checked:disabled + label:before {
  background-color: transparent;
}

.c0:checked + label {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:before {
  background-color: var(--px-toggle__background--checked,#007acc);
}

.c0:checked + label:hover {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:hover:before {
  background-color: var(--px-toggle__background--checked--hover,#005c99);
}

.c0:checked + label:active {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:active:before {
  background-color: var(--px-toggle__background--checked--pressed,#003d66);
}

.c0:checked + label:after {
  margin-left: 1.467rem;
}

<div
  className={null}
>
  <input
    checked={null}
    className="c0"
    disabled={null}
    id="toggle1"
    name="toggle1"
    size="small"
    type="checkbox"
    value={null}
  />
  <label
    className="c1"
    disabled={null}
    onClick={null}
    size="small"
  />
</div>
`;
